@@ -43,6 +43,9 @@ IN DEVELOPMENT
       #107125) and also update the blurb about the hpss' current status.
       (Robert Collins).
 
+    * ``bzr serve`` now listens on interface 0.0.0.0 by default, making it
+      serve out to the local LAN and fixing bug 98918. (Robert Collins)
+
   INTERNALS:
 
     * bzrlib API compatability with 0.8 has been dropped, cleaning up some
